Fixed some spacing issues and updated some font for readability. Filtered List functionality works but click functionality does not work

--- a/state-park-react-app/src/components/MapContainer.css
+++ b/state-park-react-app/src/components/MapContainer.css
@@ -8,22 +8,21 @@ ul {
 }
 
 #myUL {
-  list-style-type: none;
   padding: 0;
-  margin: 0;
+  list-style-type: none;
+  margin-bottom: 10px;
 }
 
 #myUL li {
   border: 1px solid #ddd;
   margin-top: -1px; /* Prevent double borders */
   background-color: #f6f6f6;
-  padding: 12px;
   text-decoration: none;
+  padding: 12px;
   font-size: 18px;
-  color: black;
   display: block;
-  width: 25%;
-  margin: 0 auto;
+  color: black;
+  width: 35%;
 }
 
 #myUL li:hover:not(.header) {
@@ -33,4 +32,24 @@ ul {
 
 .component-container {
   background-color: #fa7268;
+}
+
+.matches-title {
+  text-align: center;
+  margin-top: 2%;
+}
+
+.instruction-container {
+  float: left;
+  margin-top: -10%;
+}
+
+.instruction-title {
+  margin-left: 5%;
+}
+
+.instructions {
+  font-size: 0.8em;
+  width: 30%;
+  position: relative;
 }
